add_executable ( nee_debugger main.cc needebugger.hh needebugger.cu )
add_dependencies( nee_debugger MonteRay )

if(NOT enable_cuda )
  set_source_files_properties(  needebugger.cu PROPERTIES LANGUAGE CXX )
  set_source_files_properties(  needebugger.cu PROPERTIES COMPILE_FLAGS ${COMPILER_CPP_FILE_FLAG} )
endif()

target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/Constants )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/CrossSection )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/Geometry )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/Geometry/lnk3dnt )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/GPU_Utilities )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/IPComm )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/Material )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/Math_Functions )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/OutputControls )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/Parameters )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/Particle )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/RayTrace )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/Tally )
target_include_directories(nee_debugger PUBLIC ${CMAKE_SOURCE_DIR}/src/Utilities )
target_include_directories(nee_debugger PUBLIC ${CMAKE_BINARY_DIR}/src/Parameters )

target_include_directories(nee_debugger PUBLIC ${MPI_INCLUDE_DIRS} )
target_include_directories(nee_debugger PRIVATE ${MPI_CXX_INCLUDE_PATH} )
target_link_libraries( nee_debugger PRIVATE ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS} )
target_link_libraries( nee_debugger PRIVATE MonteRay )